welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:3: error: type mismatch;
 found   : Unit
 required: Int
	if (13 <= a && a<=19 && 13<=b && b<=19) {
        ^