welcome.lessons.welcome.bat.bool2.TeenSum.scala.code
def teenSum(a:Int, b:Int):Int = {
	return a+b;
	if (13 <= a && a<=19 && 13<=b && b<=19) {
		return 19;
	}

}
